# rustbook

./: LICENSE  Makefile.toml  README.md
.github/workflows/: regression.yml
ch03/3-2/async/async1/: Cargo.toml
ch03/3-2/async/async2/: Cargo.toml
ch03/3-2/async/async3/: Cargo.toml
ch03/3-2/async/async4/: Cargo.toml
ch03/3-2/async/async5/: Cargo.toml
ch03/3-2/thread_safety/thread2/: Cargo.toml
ch03/3-5/test_code/src/: lib.rs
ch03/3-5/test_code/tests/: lib.rs
ch03/derive/sample/src/: main.rs
ch03/iterator/: Cargo.toml
ch03/iterator/src/: main.rs
ch03/test_code/: Cargo.toml
ch03/thread_safety/thread1/: Cargo.toml
ch03/thread_safety/thread1/src/: main.rs
ch03/thread_safety/thread2/src/: main.rs
ch03/thread_safety/thread3/: Cargo.toml
ch03/thread_safety/thread3/src/: main.rs
ch03/thread_safety/thread4/: Cargo.toml
ch04/01_cli/samplecli-builder/: Cargo.toml
ch04/01_cli/samplecli-builder/src/: main.rs
ch04/01_cli/samplecli-derivemacro/: Cargo.toml
ch04/01_cli/samplecli-derivemacro/src/: main.rs
ch04/01_cli/samplecli-env/: Cargo.toml
ch04/02_logic/: input.txt
ch04/02_logic/samplecli/: Cargo.toml
ch04/04_error/error_handling/: Cargo.toml
ch04/04_error/samplecli/src/: main.rs
ch04/4-1/: Cargo.toml
ch04/4-1/samplecli-builder/: Cargo.toml
ch04/4-1/samplecli-builder/src/: main.rs
ch04/4-1/samplecli-derivemacro/: Cargo.toml
ch04/4-1/samplecli-derivemacro/src/: main.rs
ch04/4-2/: Cargo.toml
ch04/4-2/samplecli/: Cargo.toml
ch04/4-2/samplecli/src/: main.rs
ch04/4-3/samplecli/: Cargo.toml
ch04/4-3/samplecli/src/: main.rs
ch04/4-4/: Cargo.toml
ch04/4-4/error_handling/: Cargo.toml
ch04/4-4/samplecli/: Cargo.toml
ch04/4-4/samplecli/src/: main.rs
ch05/05_docker/: Dockerfile
ch05/05_docker/templates/: index.html
ch05/5-1/: Cargo.toml
ch05/5-1/src/: main.rs
ch05/5-2/: Cargo.toml
ch05/5-2/src/: main.rs
ch05/5-3/: Cargo.toml
ch05/5-3/src/: main.rs
ch05/5-4/: Cargo.toml
ch05/5-4/src/: main.rs
ch05/5-5/: Cargo.toml
ch05/5-5/src/: main.rs
ch06/6-2/mandelbrot/: Cargo.toml
ch06/6-2/mandelbrot/benches/: logic.rs
ch06/6-2/mandelbrot/src/: lib.rs  logic.rs
ch06/6-2/mandelbrot/www/: index.js
ch06/6-4/number_place/: Cargo.toml
ch06/6-4/sudoku/: Cargo.toml
ch06/mandelbrot/: Cargo.toml
ch06/mandelbrot/src/: lib.rs
ch06/mandelbrot/www/: index.html  index.js
ch07/2_widget/src/: main.rs
ch07/7-2/: Cargo.toml
ch07/7-2/src/: main.rs
ch07/7-3/: Cargo.toml
ch07/7-3/src/: main.rs
ch07/7-4/src/: main.rs
ch07/7-5/src/: main.rs
ch08/1_setup/: Dockerfile
ch08/2_hello/: Cargo.toml
ch08/4_embedded_hal/src/: main.rs
ch08/5_crate/3_panic/: Cargo.toml
ch08/8-2/: Cargo.toml  memory.x
ch08/8-2/src/: main.rs
ch08/8-3/: Cargo.toml
ch08/8-3/src/: main.rs
ch08/8-4/: runner.sh
ch08/8-4/src/: main.rs
ch08/8-5/2_heapless/: Cargo.toml  openocd.gdb
ch08/8-5/2_heapless/src/: main.rs
ch08/8-5/3_panic/: Cargo.toml
ch09/4_benchmark/2_criterion/sample/: Cargo.toml
ch09/4_benchmark/2_criterion/sample/src/: lib.rs
ch10/10-1/: Dockerfile
ch10/10-2/hello/: Cargo.toml
ch10/10-3/all/: Cargo.toml
ch10/10-3/lto/: Cargo.toml
ch10/10-3/panic/: Cargo.toml
ch10/10-5/hello_crev/: Cargo.toml
ch10/10-6/sum/src/: lib.rs
ch10/10-7/private_package/: Cargo.toml
ch10/3_binary_reduction/codegen-units/: Cargo.toml
ch10/3_binary_reduction/default/: Cargo.toml
ch10/3_binary_reduction/opt-level/: Cargo.toml
ch10/3_binary_reduction/strip/: Cargo.toml
ch10/6_fuzzing/sum/: Cargo.toml
ch11/11-2/: add_array_rs.rb
ch11/11-2/cffi/: Cargo.toml
ch11/ffi/: add_array.rb
ch11/ffi/addarray/: Cargo.toml
ch11/ffi/cffi/: build.rs
ch11/macro/macro_sample/: Cargo.toml
(+57 files in other folders)
