[package]
name = "todo"
version = "0.1.0"
authors = ["PACKAGE AUTHOR <package_author@example.com>"]  
edition = "2018"

[dependencies]
actix-web = "3.3.2"
actix-rt = "2.2.0"
thiserror = "1.0.25"
askama = "0.10.5"
rusqlite = { version = "0.25.3", features=["bundled"] }
r2d2 = "0.8.9"
r2d2_sqlite = "0.18.0"
serde = { version = "1.0.126", features = ["derive"] }
