[package]
name = "ui_demo"
version = "0.1.0"
authors = ["PACKAGE AUTHOR <package_author@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.3.0", features = ["async-std"] }
iced_native = "0.4.0"
iced_futures = "0.3.0"
async-std = "1.9.0"
