[package]
name = "sample"
version = "0.1.0"
authors = ["PACKAGE AUTHOR <package_author@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3.2"

[[bench]]
name = "benchmark"
harness = false
